# Aura

./: .gitignore  LICENSE  README.md  apply_review_fixes.sh  audit_1.txt  audit_2.txt  audit_3.txt  ev.txt  file-njc.txt  fix_and_test.sh  fix_psie.sh  fix_psie_issues.sh  fix_skill_memory.sh  fix_two_bugs.sh  local_config.yaml  pyproject.toml  requirements.txt  response(1).txt  response(2).txt  response.txt  setup_and_test.sh
data/chroma/: chroma.sqlite3
demo/: README.md  consciousness_debate.py  trajectory_report.md
eidolon_vault/: __init__.py  __main__.py  agent_personas.yaml  cli.py  cli_extension.py  config.py  conftest.py  constants.py  core.py  db.py  engine.py  exceptions.py  feeder.py  graph_builder.py  input_parser.py  knowledge_worker.py  llm_gateway.py  log.py  memory_consolidator.py  memory_store.py  models.py  persistence.py  persona_generator.py  report_generator.py  simulation_runner.py  skill_bank.py  test_knowledge_pipeline.py  utils.py
eidolon_vault/providers/: ollama.py
psie/: __init__.py  __main__.py  agent_personas.yaml  cli.py  cli_extension.py  config.py  conftest.py  constants.py  db.py  engine.py  exceptions.py  feeder.py  graph_builder.py  input_parser.py  knowledge_worker.py  llm_gateway.py  log.py  memory_consolidator.py  memory_store.py  models.py  persona_generator.py  report_generator.py  simulation_runner.py  skill_bank.py  test_config.py  test_knowledge_pipeline.py  utils.py
tests/: conftest.py  test_config.py  test_knowledge_pipeline.py
